--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,5 @@ jobs:
           arduino-cli core install rp2040:rp2040 --additional-urls https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
 
       - name: Compile Sketch
-        run: arduino-cli compile --config-file ./scripts/arduino-cli.yaml --fqbn rp2040:rp2040:waveshare_rp2040_lcd_1_28 ./src/Waveshare-RP2040-Touch-LCD-1.28/ui/ui.ino
+        run: arduino-cli compile --config-file ./scripts/arduino-cli.yaml --fqbn rp2040:rp2040:waveshare_rp2040_lcd_1_28 ./src/ui/ui.ino
         
