--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,19 +13,19 @@ name: "CodeQL"
 on: [push, pull_request]
 
 jobs:
-  analyze:
-    name: Analyze
-    # Runner size impacts CodeQL analysis time. To learn more, please see:
-    #   - https://gh.io/recommended-hardware-resources-for-running-codeql
-    #   - https://gh.io/supported-runners-and-hardware-resources
-    #   - https://gh.io/using-larger-runners
-    # Consider using larger runners for possible analysis time improvements.
-    runs-on: ubuntu-latest
-    timeout-minutes: 360
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+  # analyze:
+  #   name: Analyze
+  #   # Runner size impacts CodeQL analysis time. To learn more, please see:
+  #   #   - https://gh.io/recommended-hardware-resources-for-running-codeql
+  #   #   - https://gh.io/supported-runners-and-hardware-resources
+  #   #   - https://gh.io/using-larger-runners
+  #   # Consider using larger runners for possible analysis time improvements.
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 360
+  #   permissions:
+  #     actions: read
+  #     contents: read
+  #     security-events: write
 
     strategy:
       fail-fast: false
