replace include by yaml

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -70,7 +70,16 @@ jobs:
     # - run: |
     #     ./.github/workflows/codeql-buildscript.sh
 
-    - uses: ./.github/workflows/build.yml
+    - name: Setup Arduino CLI
+      uses: arduino/setup-arduino-cli@v1
+
+    - name: Install platform
+      run: |
+        arduino-cli core update-index
+        arduino-cli core install rp2040:rp2040 --additional-urls https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
+
+    - name: Compile Sketch
+      run: arduino-cli compile --config-file ./scripts/arduino-cli.yaml --fqbn rp2040:rp2040:waveshare_rp2040_lcd_1_28 ./src/ui/ui.ino
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
