--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,10 @@
 {
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "Dockerfile",
+        "args": { "USERNAME": "${localEnv:USER}" } 
     },
-    "postCreateCommand": "chmod +x /workspaces/Waveshare-RP2040-Touch-LCD-1.28/build.bash; cp /workspaces/Waveshare-RP2040-Touch-LCD-1.28/scripts/arduino-cli.yaml /root/.arduino15/arduino-cli.yaml",
+    "remoteUser": "${localEnv:USER}",
+    "postCreateCommand": "chmod +x /workspaces/Waveshare-RP2040-Touch-LCD-1.28/build.bash; cp /workspaces/Waveshare-RP2040-Touch-LCD-1.28/scripts/arduino-cli.yaml /home/${localEnv:USER}/.arduino15/arduino-cli.yaml",
     "customizations": {
         "vscode": {
             "extensions": [
