--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,4 +16,7 @@
         }
     }
     // ,"forwardPorts": [3000]
+    ,"mounts": [
+        { "source": "projectname-bashhistory", "target": "/commandhistory", "type":"volume" }
+    ]
 }
