test usbip parameters

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ ARG USER_GID=$USER_UID
 
 RUN apt-get update \
     && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install curl git python3
+    && apt-get -y install curl git python3 usbip usbutils
 
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
@@ -28,4 +28,8 @@ COPY .bashrc /home/$USERNAME/
 RUN arduino-cli core update-index \
     && arduino-cli core install rp2040:rp2040 --additional-urls https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
 
-RUN echo "hello"
+ENV USER=ozanges
+
+RUN sudo mkdir /commandhistory 
+RUN sudo touch /commandhistory/.bash_history 
+RUN sudo chown -R $USERNAME /commandhistory 
